--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -21,9 +21,6 @@ jobs:
       - name: Install pkg config
         run: brew install pkg-config
 
-      - name: Set environment variable arm64
-        run: echo "VCPKG_DEFAULT_TRIPLET=arm64-osx" >> $GITHUB_ENV
-
       - uses: lukka/get-cmake@latest
       - name: run-vcpkg arm64
         uses: lukka/run-vcpkg@v11.5
@@ -37,21 +34,14 @@ jobs:
           # Specify the glob expression used to discover the vcpkg.json whose content's hash is added to the cache key. On Windows runners using `github.workspace` context to form the expression would not work as expected since it contains backslashes. Use instead `**/path/to/vcpkg.json` to match the desired `vcpkg.json` file.
           vcpkgJsonGlob: '**/vcpkg.json'
 
-      - name: Set environment variable x64
-        run: echo "VCPKG_DEFAULT_TRIPLET=x64-osx" >> $GITHUB_ENV
+      - name: vcpkg install arm64-macos
+        run: ./vcpkg/vcpkg install --triplet arm64-osx
+      
+      - name: vcpkg install arm64-macos
+        run: ./vcpkg/vcpkg install --triplet x64-osx
   
-      - uses: lukka/get-cmake@latest
-      - name: run-vcpkg x64
-        uses: lukka/run-vcpkg@v11.5
-        with:
-          # Specify the full SHA-1 hash of a Git commit (not a branch name, nor a tag!) that establishes which version of vcpkg needs to be used. When using vcpkg as a Git submodule, this input is *not* needed as implicitly specified by the submodule.
-          vcpkgGitCommitId: 'b2cb0da531c2f1f740045bfe7c4dac59f0b2b69c'
-          # Run the installation of packages by running `vcpkg install` on the directory of the discovered 'vcpkg.json' file. Default is false.
-          runVcpkgInstall: true
-          # Enable the caching of the vcpkg executable and its data files (e.g. ports) by setting it to false. Default is true. Set this input to false when the vcpkg's executable is not delivered as a prebuilt file upon bootstrapping vcpkg. This does not disable vcpkg's binary cache which is always on and can be controlled by the user with the env var VCPKG_BINARY_SOURCES.
-          doNotCache: false
-          # Specify the glob expression used to discover the vcpkg.json whose content's hash is added to the cache key. On Windows runners using `github.workspace` context to form the expression would not work as expected since it contains backslashes. Use instead `**/path/to/vcpkg.json` to match the desired `vcpkg.json` file.
-          vcpkgJsonGlob: '**/vcpkg.json'
+      - name: vcpkg integrate install
+        run: ./vcpkg/vcpkg integrate install
 
       - name: Build Noir Library
         run: ./build-pblib.sh
