--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -35,10 +35,10 @@ jobs:
           vcpkgJsonGlob: '**/vcpkg.json'
 
       - name: vcpkg install macOS x64
-        run: ./vcpkg/vcpkg install --classic boost-program-options:x64-osx boost-uuid:x64-osx boost-random:x64-osx brotli:x64-osx opencv:x64-osx magic-enum:x64-osx exiv2:x64-osx gtest:x64-osx dp-thread-pool:x64-osx libharu:x64-osx sqlite3:x64-osx nlohmann-json:x64-osx boost-bimap:x64-osx spdlog:x64-osx inja:x64-osx podofo:x64-osx harfbuzz:x64-osx icu:x64-osx
+        run: ./vcpkg/vcpkg install --triplet=x64-osx
 
       - name: vcpkg install macOS arm64
-        run: ./vcpkg/vcpkg install --classic boost-program-options:arm64-osx boost-uuid:arm64-osx boost-random:arm64-osx brotli:arm64-osx opencv:arm64-osx magic-enum:arm64-osx exiv2:arm64-osx gtest:arm64-osx dp-thread-pool:arm64-osx libharu:arm64-osx sqlite3:arm64-osx nlohmann-json:arm64-osx boost-bimap:arm64-osx spdlog:arm64-osx inja:arm64-osx podofo:arm64-osx harfbuzz:arm64-osx icu:arm64-osx
+        run: ./vcpkg/vcpkg install --triplet=arm64-osx
   
       - name: vcpkg integrate install
         run: ./vcpkg/vcpkg integrate install
