cloud: Add ARM template deployment.

--- a/.github/workflows/main_pbnoirwebapp.yml
+++ b/.github/workflows/main_pbnoirwebapp.yml
@@ -70,6 +70,12 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3D02576091C14C84A6C6FE81857C9CEA }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9D877CB9CEE7456FB75020DF632AFF48 }}
 
+      - name: Deploy ARM Template
+        uses: azure/arm-deploy@v1
+        with:
+          resourceGroupName: pbnoir-rg
+          template: WebAppResources.json
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
