--- a/.github/workflows/main_pbnoirwebapp.yml
+++ b/.github/workflows/main_pbnoirwebapp.yml
@@ -66,9 +66,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A466A4941B43466FA522B342BD7FD9F8 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3D02576091C14C84A6C6FE81857C9CEA }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9D877CB9CEE7456FB75020DF632AFF48 }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy ARM Template
         uses: azure/arm-deploy@v1
