build: Update the time when the workflow is called.

--- a/.github/workflows/main_pbnoirwebapp.yml
+++ b/.github/workflows/main_pbnoirwebapp.yml
@@ -6,8 +6,10 @@ name: Build and deploy Python app to Azure Web App - PBNoirWebApp
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+    paths:
+      - '.github/**'
+      - 'webapp/**'
   workflow_dispatch:
 
 jobs:
