--- a/.github/workflows/main_pbnoirwebapp.yml
+++ b/.github/workflows/main_pbnoirwebapp.yml
@@ -74,7 +74,7 @@ jobs:
         uses: azure/arm-deploy@v1
         with:
           resourceGroupName: pb-noir
-          template: WebAppResources.json
+          template: webapp/WebAppResources.json
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
