build: Update when the builds are triggered.

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -3,6 +3,10 @@ name: iOS Build
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'osx/**'
+      - 'PB/**'
+      - '.github/**'
   pull_request:
     branches: [ "main" ]
 
