--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -11,6 +11,7 @@ on:
     paths:
       - 'windows/**'
       - 'PB/**'
+      - '.github/**'
   pull_request:
     branches: [ "main" ]
     paths:
