build: Add vulkan dependency to speed up skia.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -53,6 +53,7 @@ find_package(unofficial-sqlite3 CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(inja CONFIG REQUIRED)
+find_package(Vulkan REQUIRED)
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     find_package(podofo CONFIG REQUIRED)
@@ -223,7 +224,8 @@ target_link_libraries(${PBLIB_LIBRARY_NAME} PRIVATE
     unofficial::sqlite3::sqlite3
     nlohmann_json::nlohmann_json
     spdlog::spdlog
-    pantor::inja)
+    pantor::inja
+    Vulkan::Vulkan)
 else()
     target_link_libraries(${PBLIB_LIBRARY_NAME} PRIVATE
         opencv_core
@@ -235,7 +237,8 @@ else()
         unofficial::sqlite3::sqlite3
         nlohmann_json::nlohmann_json
         spdlog::spdlog
-        pantor::inja)
+        pantor::inja
+        Vulkan::Vulkan)
 endif()
 
 set_target_properties(${PBLIB_LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
