build: Setup python when deploying.

--- a/.github/workflows/main_pbnoirwebapp.yml
+++ b/.github/workflows/main_pbnoirwebapp.yml
@@ -57,6 +57,11 @@ jobs:
       
 
     steps:
+      - name: Set up Python version
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
