--- a/.github/workflows/main_pbnoirwebapp.yml
+++ b/.github/workflows/main_pbnoirwebapp.yml
@@ -32,7 +32,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r webapp/requirements.txt
 
       - name: Zip artifact for deployment
         run: zip release.zip ./webapp/* -r
@@ -68,7 +68,12 @@ jobs:
           name: python-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip release.zip; mv webapp/requirements.txt requirements.txt
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Login to Azure
         uses: azure/login@v2
