Add azure service class.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -126,6 +126,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     include/pb/jobs/LutIconsPreprocessingJob.h
     include/pb/jobs/PicturesSearchJob.h
     include/pb/jobs/ThumbnailsJob.h
+    include/pb/services/AzureService.h
     include/pb/services/CollageService.h
     include/pb/services/DatabaseService.h
     include/pb/services/DirectoryInspectionService.h
@@ -149,6 +150,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     include/pb/infra/Traits.h
     include/pb/infra/TSQueue.h
 
+    src/AzureService.cpp
     src/CollageImage.cpp
     src/CollageLibraryAssistant.cpp
     src/CollageMakerJob.cpp
