build: Update names and pipeline extecusion condition.

--- a/.github/workflows/main_newsletterfunction.yml
+++ b/.github/workflows/main_newsletterfunction.yml
@@ -2,12 +2,14 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python project to Azure Function App - newsletterfunction
+name: Build & Deploy Azure Function App
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+    paths:
+      - '.github/**'
+      - 'functionapp/**'
   workflow_dispatch:
 
 env:
