--- a/.github/workflows/main_newsletterfunction.yml
+++ b/.github/workflows/main_newsletterfunction.yml
@@ -67,7 +67,12 @@ jobs:
           name: python-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip     
+        run: unzip release.zip; mv functionapp/requirements.txt requirements.txt
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
         
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
