--- a/.github/workflows/main_newsletterfunction.yml
+++ b/.github/workflows/main_newsletterfunction.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt; pip list
         
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
