--- a/.github/workflows/main_newsletterfunction.yml
+++ b/.github/workflows/main_newsletterfunction.yml
@@ -2,6 +2,8 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
 
+#The deployment is not working properly, use this command instead func azure functionapp publish newsletterfunction  --build remote --python
+
 name: Build & Deploy Azure Function App
 
 on:
@@ -14,7 +16,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.11' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+  PYTHON_VERSION: '3.12.9' # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
   build:
